Resolve issue with pentagon.png not fitting into compImg

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,6 +127,7 @@ i {
 }
 
 #compImg {
+  display: flex;
   width: 10rem;
   height: 10rem;
   border: solid 5px;
